<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are downloading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="notification_channel">Download</string>


    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="file_name">Glide - Image Loading Library by BumpTech</string>
    <string name="status">Success</string>
    <string name="cloud_download_image">Cloud with downward pointed arrow in the center</string>
    <string name="noRepotSelectedText">Please select the file to download</string>

    <string name="download_notification_channel_id">69</string>

    <string name="glide_download">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_download">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>

    <string name="snooze">Snooze</string>
    <string name="download">Download</string>

    <string name="title">title</string>
    <string name="success">Success</string>

    <string name="fail">Fail</string>
</resources>
