<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/cloud_download_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"

        android:contentDescription="@string/cloud_download_image"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download_cloud_image"
        app:tint="#9c4bff" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amethysta"
            android:text="@string/glide_download" />

        <RadioButton
            android:id="@+id/radio_load_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/amethysta"
            android:text="@string/udacity_download" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/amethysta"
            android:text="@string/retrofit_download" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        app.textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/amethysta"
        app:backgroundColor="@color/colorPrimary"
        app:circleColor="@color/colorAccent"
        app:downloadText="@string/button_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:downloadingBackgroundColor="@color/colorPrimaryDark"

        app:layout_constraintStart_toStartOf="parent"
        app:text="Download" />

</androidx.constraintlayout.widget.ConstraintLayout>