<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/detail_scene"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginTop="@dimen/normal_spacing"
        android:fontFamily="@font/amethysta"
        android:text="@string/file_name"

        android:textColor="@color/dark_gray"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/file_name" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:fontFamily="@font/amethysta"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelName"
        app:layout_constraintTop_toTopOf="@id/labelName"
        tools:text="File name" />


    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_spacing"
        android:fontFamily="@font/amethysta"
        android:text="@string/status"

        android:textColor="@color/dark_gray"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="@id/labelName"
        app:layout_constraintStart_toStartOf="@id/labelName"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:fontFamily="@font/amethysta"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/default_text_size"

        app:layout_constraintStart_toEndOf="@id/labelStatus"
        app:layout_constraintTop_toTopOf="@id/labelStatus"
        tools:text="status" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:layout_marginBottom="@dimen/normal_spacing"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:fontFamily="@font/amethysta"
        android:textColor="@color/white"

        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>